--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,7 @@
 [General]
 DefaultDesktop=1
 TaskbarScrollSwitching=1
-UseNativePrevNextDesktopSwitchingIfConflicting=0
+UseNativePrevNextDesktopSwitchingIfConflicting=1
 DesktopWrapping=0
 
 [Tooltips]
@@ -34,17 +34,17 @@ OpenDesktopManager=LAlt, SC029
 
 [KeyboardShortcutsModifiers]
 ; SwitchDesktop=Win, Ctrl
-SwitchDesktop=LAlt
+SwitchDesktop=Ctrl, LAlt
 MoveWindowToDesktop=
-MoveWindowAndSwitchToDesktop=LAlt, Shift
+MoveWindowAndSwitchToDesktop=Ctrl, LAlt, Shift
 ; MoveWindowAndSwitchToDesktop=Win, Ctrl, Shift
 NextTenDesktops=
 
 [KeyboardShortcutsIdentifiers]
-PreviousDesktop=PgDn
-NextDesktop=PgUp
-; PreviousDesktop=Left
-; NextDesktop=Right
+;PreviousDesktop=PgDn
+;NextDesktop=PgUp
+PreviousDesktop=Left
+NextDesktop=Right
 Desktop1=1
 Desktop2=2
 Desktop3=3
